--- a/Deza.MvcWebUI/Views/Product/Save.cshtml
+++ b/Deza.MvcWebUI/Views/Product/Save.cshtml
@@ -1,28 +1,27 @@
-﻿@model Deza.Models.ViewModels.ProductSaveVM
+﻿@model ProductSaveVM
 
-
-    <div class="row">
-        <form method="post">
-            <div class="col-sm-6">
-                <div class="form-group">
-                    <label asp-for="ProductId"></label>
-                    <input type="text" class="form-control" asp-for="ProductId">
-                    <span asp-validation-for="ProductId"></span>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="form-group">
-                    <label asp-for="ProductName"></label>
-                    <input type="text" class="form-control" asp-for="ProductName">
-                    <span asp-validation-for="ProductName"></span>
-                </div>
-            </div>
+<div class="row">
+    <form method="post">
+        <div class="col-sm-6">
             <div class="form-group">
-                <label asp-for="CategoryId"></label>
-                <select asp-for="CategoryId" asp-items="Model.CategoryList.Select(x=>new SelectListItem() { Value=x.Value,Text=x.Text }).ToList()" class="form-control" style="width:100%;">
-                </select>
-                <span asp-validation-for="CategoryId"></span>
+                <label asp-for="ProductId"></label>
+                <input type="text" class="form-control" asp-for="ProductId">
+                <span asp-validation-for="ProductId"></span>
             </div>
-            <input type="submit" value="Kaydet" />
-        </form>
-    </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="form-group">
+                <label asp-for="ProductName"></label>
+                <input type="text" class="form-control" asp-for="ProductName">
+                <span asp-validation-for="ProductName"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="CategoryId"></label>
+            <select asp-for="CategoryId" asp-items="Model.CategoryList.Select(x=>new SelectListItem() { Value=x.Value,Text=x.Text }).ToList()" class="form-control" style="width:100%;">
+            </select>
+            <span asp-validation-for="CategoryId"></span>
+        </div>
+        <input type="submit" value="Kaydet" />
+    </form>
+</div>
