--- a/Deza.MvcWebUI/Views/_ViewImports.cshtml
+++ b/Deza.MvcWebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Deza.MvcWebUI
-@using Deza.MvcWebUI.Models
+@using Deza.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
